App in JS file, views

--- a/web/views/welcome.html
+++ b/web/views/welcome.html
@@ -1,2 +1,4 @@
-<h1>Welcome</h1>
-<p>A test project about end-to-end generic CRUD with Angular and MongoDB</p>
+<div style="padding: 40px">
+	<h1>Welcome</h1>
+	<p>A test project about end-to-end generic CRUD with Angular and MongoDB</p>
+</div>
