--- a/web/views/users.html
+++ b/web/views/users.html
@@ -1,28 +1,36 @@
-<h2>Users</h2>
+<h2 style="display: inline">Users</h2>
+<span style="float: right">
+	<button class="btn btn-primary" type="button">
+	  New
+	</button>
+</span>
+
+<div style="height: 20px"></div>
 
 <table class="table table-hover">
 	<thead>
 		<tr>
+			<th style="text-align: center; width: 170px">Action</th>
 			<th>First name</th>
 			<th>Last name</th>
 			<th>e-mail</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
-			<td>John</td>
-			<td>Doe</td>
-			<td>john@example.com</td>
-		</tr>
-		<tr>
-			<td>Mary</td>
-			<td>Moe</td>
-			<td>mary@example.com</td>
-		</tr>
-		<tr>
-			<td>July</td>
-			<td>Dooley</td>
-			<td>july@example.com</td>
+		<tr ng-repeat="item in items">
+			<td style="text-align: center">
+				<button class="btn btn-warning btn-sm" type="button">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+					Modify
+				</button>
+				<button class="btn btn-danger btn-sm" type="button">
+					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+					Delete
+				</button>
+			</td>
+			<td ng-bind="item.name"></td>
+			<td ng-bind="item.surname"></td>
+			<td ng-bind="item.email"></td>
 		</tr>
 	</tbody>
 </table>
