--- a/web/views/users.html
+++ b/web/views/users.html
@@ -1,7 +1,8 @@
 <h2 style="display: inline">Users</h2>
 <span style="float: right">
 	<button class="btn btn-primary" type="button">
-	  New
+		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+		New
 	</button>
 </span>
 
@@ -19,10 +20,11 @@
 	<tbody>
 		<tr ng-repeat="item in items">
 			<td style="text-align: center">
+				<a href="#users/update/{{item._id}}">
 				<button class="btn btn-warning btn-sm" type="button">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 					Modify
-				</button>
+				</button></a>
 				<button class="btn btn-danger btn-sm" type="button">
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 					Delete
