--- a/web/views/users-update.html
+++ b/web/views/users-update.html
@@ -1,3 +1,29 @@
-<h2>Update user</h2>
+<h2 style="margin-top: 0px; margin-bottom: 20px">Update user</h2>
 
-Pending...
+<form class="form-horizontal">
+	<div class="form-group">
+		<label for="input-name" class="col-sm-2 control-label">Name</label>
+		<div class="col-sm-10">
+			<input ng-model="item.name" type="text" class="form-control" id="input-name" placeholder="Name">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="input-surname" class="col-sm-2 control-label">Surname</label>
+		<div class="col-sm-10">
+			<input ng-model="item.surname" type="text" class="form-control" id="input-surname" placeholder="Surname">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="input-email" class="col-sm-2 control-label">e-mail</label>
+		<div class="col-sm-10">
+			<input ng-model="item.email" type="email" class="form-control" id="input-email" placeholder="e-mail">
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-12 text-center">
+			<button type="button" class="btn btn-primary">Update</button>
+			&nbsp;
+			<button type="button" class="btn btn-default">Cancel</button>
+		</div>
+	</div>
+</form>
