--- a/web/views/users.html
+++ b/web/views/users.html
@@ -20,11 +20,10 @@
 	<tbody>
 		<tr ng-repeat="item in items">
 			<td style="text-align: center">
-				<a href="#users/update/{{item._id}}">
-				<button class="btn btn-warning btn-sm" type="button">
+				<a href="#users/update/{{$index}}" class="btn btn-warning btn-sm">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 					Modify
-				</button></a>
+				</a>
 				<button class="btn btn-danger btn-sm" type="button">
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 					Delete
