Added ToDo in README / improved CRUD controller

--- a/web/views/users-update.html
+++ b/web/views/users-update.html
@@ -23,7 +23,7 @@
 		<div class="col-sm-12 text-center">
 			<button type="button" class="btn btn-primary">Update</button>
 			&nbsp;
-			<button type="button" class="btn btn-default">Cancel</button>
+			<a href="#/users" class="btn btn-default">Cancel</a>
 		</div>
 	</div>
 </form>
