Working on update

--- a/web/views/users-update.html
+++ b/web/views/users-update.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class="form-group">
 		<div class="col-sm-12 text-center">
-			<button type="button" class="btn btn-primary">Update</button>
+			<button type="button" class="btn btn-primary" ng-click="doUpdate()">Update</button>
 			&nbsp;
 			<a href="#/users" class="btn btn-default">Cancel</a>
 		</div>
