--- a/web/views/user-table.html
+++ b/web/views/user-table.html
@@ -1,9 +1,9 @@
 <h2 style="display: inline">Users</h2>
 <span style="float: right">
-	<button class="btn btn-primary" type="button">
+	<a href="#users/create" class="btn btn-primary">
 		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 		New
-	</button>
+	</a>
 </span>
 
 <div style="height: 20px"></div>
