--- a/web/views/user-form.html
+++ b/web/views/user-form.html
@@ -1,4 +1,6 @@
-<h2 style="margin-top: 0px; margin-bottom: 20px">Update user</h2>
+<h2 style="margin-top: 0px; margin-bottom: 20px">
+	{{ action == 'create' ? 'New' : 'Update' }} user
+</h2>
 
 <form class="form-horizontal">
 	<div class="form-group">
@@ -21,7 +23,9 @@
 	</div>
 	<div class="form-group">
 		<div class="col-sm-12 text-center">
-			<button type="button" class="btn btn-primary" ng-click="doUpdate()">Update</button>
+			<button type="button" class="btn btn-primary" ng-click="doSubmit()">
+				{{ action == 'create' ? 'Create' : 'Update' }}
+			</button>
 			&nbsp;
 			<a href="#/users" class="btn btn-default">Cancel</a>
 		</div>
