Starting with collection metadata

--- a/web/views/user-form.html
+++ b/web/views/user-form.html
@@ -3,11 +3,11 @@
 </h2>
 
 <form class="form-horizontal">
-	<form-input id="input-name" label="Name" placeholder="Name"
-		model="item.name" type="text" autofocus></form-input>
-	<form-input id="input-surname" label="Surname" placeholder="Surname"
-		model="item.surname" type="text"></form-input>
-	<form-input id="input-email" label="e-mail" placeholder="e-mail"
-		model="item.email" type="email"></form-input>
-	<form-create-update-buttons></form-create-update-buttons>
+	<crud-input id="input-name" label="Name" placeholder="Name"
+		model="item.name" type="text" autofocus></crud-input>
+	<crud-input id="input-surname" label="Surname" placeholder="Surname"
+		model="item.surname" type="text"></crud-input>
+	<crud-input id="input-email" label="e-mail" placeholder="e-mail"
+		model="item.email" type="email"></crud-input>
+	<crud-form-buttons></crud-form-buttons>
 </form>
