--- a/web/views/user-table.html
+++ b/web/views/user-table.html
@@ -10,6 +10,8 @@
 <div style="height: 20px"></div>
 
 <!-- Table displaying all items -->
+<crud-table></crud-table>
+
 <table class="table table-hover">
 	<thead>
 		<tr>
