--- a/web/views/welcome.html
+++ b/web/views/welcome.html
@@ -1,4 +1,4 @@
 <div style="padding: 40px">
 	<h1>Welcome</h1>
-	<p>A test project about end-to-end generic CRUD with Angular and MongoDB</p>
+	<p>A test project about end-to-end generic CRUD with <b>Angular</b> and <b>Bootstrap</b> on the client, <b>node.js</b> and <b>MongoDB</b> on the server</p>
 </div>
