--- a/web/templates/crud-table.html
+++ b/web/templates/crud-table.html
@@ -1,1 +1,57 @@
-ToDo: implement generic crud table by exploiting information from $scope.crud<br><br>
+<table class="table table-hover">
+	<thead>
+		<tr>
+			<th style="text-align: center; width: 170px">Action</th>
+			<th ng-repeat="field in collInfo.fieldOrder">
+				{{ collInfo.fields[field].colLabel }}
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr ng-repeat="item in items">
+			<!-- Action buttons -->
+			<td style="text-align: center">
+				<a href="#users/update/{{$index}}" class="btn btn-warning btn-sm">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+					Modify
+				</a>
+				<button class="btn btn-danger btn-sm" type="button"
+					data-toggle="modal" data-target="#confirm-delete"
+					ng-click="prepareDelete($index)">
+					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+					Delete
+				</button>
+			</td>
+			<!-- Rest of columns -->
+			<td ng-repeat="field in collInfo.fieldOrder" ng-style="collInfo.fields[field].cellStyle">
+				{{ item[field] }}
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+
+<!-- Delete confirmation dialog -->
+<div id="confirm-delete" class="modal fade">
+	<div class="modal-dialog modal-sm">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h4 class="modal-title">Confirm deletion</h4>
+			</div>
+			<div class="modal-body">
+				<p>Do you really want to delete this item?</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-danger" data-dismiss="modal"
+				ng-click="doDelete('confirm-delete')">
+					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+					Delete
+				</button>
+				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+			</div>
+		</div>
+	</div>
+</div>
