Users table view is now fully generic CRUD

--- a/web/views/user-table.html
+++ b/web/views/user-table.html
@@ -1,7 +1,7 @@
 <!-- Title and "New" button -->
-<h2 style="display: inline">Users</h2>
+<h2 style="display: inline">{{ collInfo.tableName }}</h2>
 <span style="float: right">
-	<a href="#users/create" class="btn btn-primary">
+	<a href="#{{ collInfo.collection }}/create" class="btn btn-primary">
 		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 		New
 	</a>
