--- a/web/templates/crud-table.html
+++ b/web/templates/crud-table.html
@@ -11,7 +11,7 @@
 		<tr ng-repeat="item in items">
 			<!-- Action buttons -->
 			<td style="text-align: center">
-				<a href="#users/update/{{$index}}" class="btn btn-warning btn-sm">
+				<a href="#{{collInfo.collection}}/update/{{$index}}" class="btn btn-warning btn-sm">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 					Modify
 				</a>
