Refactoring crud scope data into ._crud

--- a/web/templates/crud-form-view.html
+++ b/web/templates/crud-form-view.html
@@ -1,5 +1,5 @@
 <h2 style="margin-top: 0px; margin-bottom: 20px">
-	{{ action == 'create' ? 'New' : 'Update' }} {{ collection | singular }}
+	{{ action == 'create' ? 'New' : 'Update' }} {{ _crud.collectionName | singular }}
 </h2>
 
 <form class="form-horizontal">
