--- a/web/templates/crud-table.html
+++ b/web/templates/crud-table.html
@@ -2,8 +2,9 @@
 	<thead>
 		<tr>
 			<th style="text-align: center; width: 170px">Action</th>
-			<th ng-repeat="field in collInfo.fieldOrder" ng-if="collInfo.fields[field].showInTable">
-				{{ collInfo.fields[field].colLabel }}
+			<th ng-repeat="field in _crud.collectionMeta.fieldOrder"
+				ng-if="_crud.collectionMeta.fields[field].showInTable">
+				{{ _crud.collectionMeta.fields[field].colLabel }}
 			</th>
 		</tr>
 	</thead>
@@ -11,7 +12,8 @@
 		<tr ng-repeat="item in items">
 			<!-- Action buttons -->
 			<td style="text-align: center">
-				<a href="#{{collInfo.collection}}/update/{{$index}}" class="btn btn-warning btn-sm">
+				<a href="#{{_crud.collectionMeta.collection}}/update/{{$index}}"
+					class="btn btn-warning btn-sm">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 					Modify
 				</a>
@@ -23,9 +25,10 @@
 				</button>
 			</td>
 			<!-- Rest of columns -->
-			<td ng-repeat="field in collInfo.fieldOrder" ng-if="collInfo.fields[field].showInTable"
-				ng-style="collInfo.fields[field].cellStyle"
-				ng-bind-html="collInfo.fields[field].cellRender(item[field])"></td>
+			<td ng-repeat="field in _crud.collectionMeta.fieldOrder"
+				ng-if="_crud.collectionMeta.fields[field].showInTable"
+				ng-style="_crud.collectionMeta.fields[field].cellStyle"
+				ng-bind-html="_crud.collectionMeta.fields[field].cellRender(item[field])"></td>
 			</td>
 		</tr>
 	</tbody>
