--- a/web/templates/crud-form-view.html
+++ b/web/templates/crud-form-view.html
@@ -4,11 +4,7 @@
 
 <form class="form-horizontal">
 	<div ng-repeat="field in _crud.collectionMeta.fieldOrder">
-		<crud-form-input id="input-{{field}}" label="{{_crud.collectionMeta.fields[field].label}}"
-			placeholder="{{_crud.collectionMeta.fields[field].placeholder}}" model="item[field]"
-			type="{{_crud.collectionMeta.fields[field].inputAttrs.type}}"
-			autofocus="{{ $first ? 'true' : 'false' }}">
-		</crud-form-input>
+		<crud-form-input></crud-form-input>
 	</div>
 	<crud-form-buttons></crud-form-buttons>
 </form>
