--- a/web/templates/crud-table.html
+++ b/web/templates/crud-table.html
@@ -19,7 +19,7 @@
 				</a>
 				<button class="btn btn-danger btn-sm" type="button"
 					data-toggle="modal" data-target="#confirm-delete"
-					ng-click="prepareDelete($index)">
+					ng-click="prepareDelete($index, 'confirm-delete')">
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 					Delete
 				</button>
